Assistant checkpoint: Replace deprecated Long constructor
Assistant generated file changes:
- src/test/java/alm/TestEquals.java: Replace deprecated Long constructor with Long.valueOf

---

User prompt:

In the shell, I see the following:

```
/home/runner/workspace/src/test/java/alm/TestEquals.java: /home/runner/workspace/src/test/java/alm/TestEquals.java uses or overrides a deprecated API that is marked for removal.
[INFO] /home/runner/workspace/src/test/java/alm/TestEquals.java: Recompile with -Xlint:removal for details.
```

If applicable, propose a fix immediately.